# PowerCocentrationBench

./: .gitignore  README.md  evaluate.py  pyproject.toml
attacks/: base.py  registry.py
configs/: autodan_ga_llama3.yaml  gcg_vicuna7b.yaml
docs/: ATTACK_MANUAL.md
judges/: base.py  harmbench.py  llm_judge.py  multi_judge.py  registry.py  strongreject.py
judges/backends/: base.py  huggingface_backend.py  openrouter_backend.py
models/: loader.py  registry.py
prompt_datasets/: base.py  registry.py  socialharmbench.py
tampering_data/: README.md  base.py  registry.py
