[project]
name = "powerconcentrationbench"
version = "0.1.0"
description = "Jailbreak-attack benchmark for AI safety research, built on SocialHarmBench"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core
    "torch>=2.2",
    "transformers>=4.42",
    "accelerate>=0.31",
    "peft>=0.11",          # LoRA fine-tuning (weight-tampering attacks)
    "bitsandbytes>=0.43",  # quantized loading for larger targets on limited hardware

    # Data / config / orchestration
    "pandas>=2.2",
    "pyyaml>=6.0",

    # OpenRouter judge backend (OpenAI-compatible client)
    "openai>=1.30",

    # Utilities
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["attacks", "judges", "models", "prompt_datasets", "tampering_data"]
